--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,6 @@
         android:theme="@style/Theme.SmartWeather"
         tools:targetApi="31">
         <activity
-            android:name=".TimePickerApp"
-            android:exported="false" />
-        <activity
-            android:name=".configuracion"
-            android:exported="false" />
-        <activity
-            android:name=".home"
-            android:exported="false" />
-        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -30,6 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".ConfiguracionActivity" />
     </application>
 
 </manifest>
