--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.SmartWeather"
         tools:targetApi="31">
         <activity
+            android:name=".HistorialActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HistorialAlarmasActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MenuActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
